--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,15 +29,15 @@ h1, h2 {
 }
 
 #alertsList li.green {
-    border-left: 5px solid #28a745; /* Green for low risk */
+    border-left: 5px solid #28a745; 
 }
 
 #alertsList li.yellow {
-    border-left: 5px solid #ffc107; /* Yellow for medium risk */
+    border-left: 5px solid #ffc107; 
 }
 
 #alertsList li.red {
-    border-left: 5px solid #dc3545; /* Red for high risk */
+    border-left: 5px solid #dc3545; 
 }
 
 form {
