style(templates): adjust carousel item height for better responsiveness

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,10 +56,10 @@ le    <nav class="bg-white shadow-lg fixed top-0 left-0 w-full z-50">
       
         <div id="carousel" class="carousel-container flex transition-transform duration-700 ease-in-out">
   
-            <div class="carousel-item flex-shrink-0 w-full h-96 md:h-screen bg-cover bg-center rounded-lg shadow-lg" style="background-image: url('https://placehold.co/1200x800/222222/cccccc?text=Image+1');"></div>
-            <div class="carousel-item flex-shrink-0 w-full h-96 md:h-screen bg-cover bg-center rounded-lg shadow-lg" style="background-image: url('https://placehold.co/1200x800/333333/cccccc?text=Image+2');"></div>
-            <div class="carousel-item flex-shrink-0 w-full h-96 md:h-screen bg-cover bg-center rounded-lg shadow-lg" style="background-image: url('https://placehold.co/1200x800/444444/cccccc?text=Image+3');"></div>
-            <div class="carousel-item flex-shrink-0 w-full h-96 md:h-screen bg-cover bg-center rounded-lg shadow-lg" style="background-image: url('https://placehold.co/1200x800/555555/cccccc?text=Image+4');"></div>
+            <div class="carousel-item flex-shrink-0 w-full h-56 md:h-[65vh] bg-cover bg-center rounded-lg shadow-lg" style="background-image: url('https://placehold.co/1200x800/222222/cccccc?text=Image+1');"></div>
+            <div class="carousel-item flex-shrink-0 w-full h-56 md:h-[65vh] bg-cover bg-center rounded-lg shadow-lg" style="background-image: url('https://placehold.co/1200x800/333333/cccccc?text=Image+2');"></div>
+            <div class="carousel-item flex-shrink-0 w-full h-56 md:h-[65vh] bg-cover bg-center rounded-lg shadow-lg" style="background-image: url('https://placehold.co/1200x800/444444/cccccc?text=Image+3');"></div>
+            <div class="carousel-item flex-shrink-0 w-full h-56 md:h-[65vh] bg-cover bg-center rounded-lg shadow-lg" style="background-image: url('https://placehold.co/1200x800/555555/cccccc?text=Image+4');"></div>
         </div>
 
      
